--- a/src/style.css
+++ b/src/style.css
@@ -13,18 +13,20 @@ header {
 }
 
 main {
+    width: 80%;
     display: flex;
     justify-content: center;
     align-items: stretch;
     flex-wrap: wrap;
-    margin: 20px;
+    margin: 20px auto;
 }
 
 .employee-card {
-    width: 300px;
+    width: 250px;
     border: 2px solid black;
     border-radius: 5px;
     padding: 5px;
+    margin: 10px;
 }
 
 ul {
